--- a/css/custom.css
+++ b/css/custom.css
@@ -189,7 +189,7 @@
   z-index: 3;
   top: 1.23809524em;
   right: 1.23809524em;
-  background: #FFC50A!important;
+  background: #964400!important;
 }
 .labelsale:not([class*='bg--']) {
   background: #238b53;
